--- a/sample.tex
+++ b/sample.tex
@@ -1,7 +1,7 @@
-	\documentclass{procDDs}
+\documentclass{procDDs}
 
 \usepackage[utf8]{inputenc}                                                 % load packages only if necessary
-\usepackage[english, russian]{babel}
+%\usepackage[english, russian]{babel}
 \usepackage[usenames]{color}
                                       
 
@@ -39,32 +39,31 @@ Far Eastern Federal University, Vladivostok, Russia}                 % same affi
 
 \begin{abstract}
    The kinetic model, describing sound propagation in the ocean with diffuse reflection by Lambert's cosine law on the bottom surface, is considered. Based on it the inverse problem of bottom scattering reconstruction is formulated.
-   
-   Inverse problem is reduced to finding of solution of integral equation of the first kind. Iteration algorithm for finding of solution inverse problem is proposed and numerical experiments by recovering of coefficient of bottom scattering at different width of directivity pattern are carried out.
+	The inverse problem is reduced to solving the Fredholm integral equation of the first kind. An iterative algorithm solving it is developed. Numerical experiments reconstruction of the seabottom scattering coefficient at different width of directivity pattern are carried out.
 \end{abstract}
 
 \section{Introduction}
-There is mainstream problem in the World ocean research which relates to conservation and rational use of its resources. Nowadays, ocean can barely afford to many times increased the anthropogenic influence. Its variations is required a permanent monitoring. One of the most effective method of registration for local changes is survey of the seabottom and the water column using by underwater unmanned vehicle which equipped by the side-scan sonar. The principle of sonar is based on the emitting and the detection of the reflected echo signal. There are several approaches for the description of this process. The wave models, taking into account an amplitude and a phase of the propagated signal, is most common use. However, if wavelength is comparable to the sampling scale then the beam signal propagation theory is also valid \textbf{[Quanjo, Turner]}. It is based on the kinetic model of the transfer acoustic radiation in the randomly inhomogeneous media \textbf{[SMJ]}. The main advantage of this model is taking into account the middle scattering in the media, which is constitute about 10\% of the total attenuation in the demersal layer, according to the practical research I.B. Andreeva \textbf{[Andreeva]}. The influence of the volume scattering on the propagating signal is widely studied in the previous works. For instance, in paper \textbf{[Acoustical Physics]} the problem of the determination the seabottom scattering coefficient based on the received signal by sonar is considered. That problem was solved using by following approximations. There are the single scattering in the media, narrow directivity pattern of the receiving antenna and a pointwise source. Authors deduced an explicit formula for the determination of the seabottom scattering coefficient which is taking into account the additive correction to the volume scattering in the total signal. Further evolution of this problem is continued in paper \cite{SPIE_KOV}, in which authors used a source, close to the real experiments. It emits parcels during finite time interval. Thus, authors reduced the reconstruction problem to the Fredholm integral equation of the first kind, in the left side of which is a total measured signal by SSS,  on the other side is unknown function, describing inhomogeneous of the seabottom surface. 
+There is mainstream problem in the World Ocean research which relates to conservation and rational use of its resources. Nowadays, ocean can barely afford to many times increased the anthropogenic influence. Its variations is required a permanent monitoring. One of the most effective method of registration for local changes is survey of a seabottom and a water column using by autonomus unmanned vehicle which equipped by a side-scan sonar (SSS). The principle of sonar is based on emitting and detecting of the reflected echosignal. There are several approaches for the description of this process. The wave models, taking into account an amplitude and a phase of the propagated signal, is most common use. However, if wavelength is comparable to the sampling scale then the beam signal propagation theory is also valid \cite{Turner}, \cite{Zurk}. It is based on the kinetic model of the transfer acoustic radiation in the randomly inhomogeneous media \cite{SMJ2015}. The main advantage of this model is taking into account the middle scattering in the media which is constitute about 10\% of the total attenuation in a demersal layer, according to the practical research I.B. Andreeva \cite{Andreeva}. The influence of the volume scattering on the propagating signal is widely studied in the previous works. For instance, in paper \cite{AF2015} the problem of the determination the seabottom scattering coefficient based on the received signal by sonar is considered. That problem was solved using by following approximations. There are the single scattering in the media, narrow directivity pattern of the receiving antenna and a pointwise source. Authors deduced an explicit formula for the determination of the seabottom scattering coefficient which is taking into account the additive correction to the volume scattering in the total signal. Further evolution of this problem is continued in paper \cite{SPIE_KOV} in which authors used a source is been close to the real experiments. It emits parcels during finite time interval. Thus, authors reduced the reconstruction problem to the Fredholm integral equation of the first kind in the left side of which is a total measured signal by SSS,  on the other side is unknown function, describing inhomogeneous of the seabottom surface.
 
-There are so many papers about solving the Fredholm integral equation of the first kind. The most ones were based on the researches by A.N. Tikhonov and A.B. Bakushinskii \textbf{[Tikhonov (спроси у Всилича), Bakushinskii]}. Further, authors considered papers which is the most suitable for the specifics of the problem studying. It is worth to note authors research the problem with a receiver equipped by  a wide directivity pattern. In \textbf{[PRUAC]} authors solved one using by the narrow directivity pattern approximation which leads to the object defocusing of the sebottom reconstruction. However, the solution of the directivity diagram has a small aperture.
+There are so many papers about solving the Fredholm integral equation of the first kind. The most ones were based on the researches by A.N. Tikhonov and A.B. Bakushinskii \cite{Tikhonov}, \cite{Baku}. Further, authors considered papers which is the most suitable for the specifics of the problem studying. It is worth to note authors research the problem with a receiver equipped by  a wide directivity pattern. In \cite{PRUAC} authors solved one using by the narrow directivity pattern approximation which leads to the object defocusing of the seabottom reconstruction. However, the solution of the directivity diagram has a small aperture.
 
-Highly successful convolution algorithms for the reconstruction of  the Earth surface  using by a high-resolution satellite images are developed in the works of Shcherbinina N. V. \textbf{ [Shcherbinina]}Method is based on using the frequency for the improving image sharpness. This approach could be applicable for the time spectrum also.  
+Highly successful convolution algorithms for the reconstruction of  the Earth surface  using by a high-resolution satellite images are developed in the works of Shcherbinina N. V. \cite{Shcherbinina}. Method is based on using the frequency for the improving image sharpness. This approach could be applicable for the time spectrum also.
 
 In paper \cite{p2} the focusing problem of laser radiation is solved in the approximation of the geometric optic. Authors were obtained the condition that if the incident radiation have a central symmetry and small domain of irradiation then problem is solvable.
 
 In paper \cite{p3} authors interpreted the blur and defocusing as additive space-invariant distortion. The problem is solved using by the Fourier transform decomposition combined with the regularization.
 
-In this paper authors develop a generalized algorithm of the image focusing for the reconstruction of seabed scattering coefficient based on the received echosignal by SSS equipped by the widely directivity pattern. Thus, a solution of the Fredholm integral equation of the first kind is reduced to the solving of SLE by an iterative method combined with the regularization.
+In this paper authors develop a generalized algorithm of object focusing for the reconstruction of seabed scattering coefficient based on the received echosignal by SSS equipped by the widely directivity pattern. Thus, a solution of the Fredholm integral equation of the first kind is reduced to the solving of SLE by an iterative method combined with the regularization.
 
 \section{Formulation of the problem}
 \begin{figure}[h!]\center
 	
 	\includegraphics[width=1\linewidth]{img/gbo.jpg}
-	\caption{АНПА с ГБО на борту}
+	\caption{AUV with SSS on board}
 	\label{ris:gbo}
 \end{figure}
 Propagation of acoustic waves on the tens order kHz frequencies in the fluctuating ocean is described by radiation
-transfer equation\cite{p11},\cite{p12}:
+transfer equation \textcolor{red}{\cite{p11},\cite{p12}:}
 
 A long formula:
 \begin{multline}
@@ -76,7 +75,7 @@ A long formula:
 here $\r \in \mathbb{R}^3, t \in [0, T]$ and wave vector $\k$ belongs to the unit sphere $\Omega := \{\k \in \mathbb{R}^3: |\k| = 1\}$. The function $I(\r,\k, t)$ denotes the wave energy of flux density at time $t$  at the point $\r$ which propagates in the direction $\k$  with velocity $c$. $\mu$ and $\sigma$ denote the attenuation and the scattering coefficients, respectively, and the function $J$ describes the sources of
 wave field.
 
-Sonar signal is propagated in the medium $G:=\{\r \in \mathbb{R}^3:r_3 > -l\}$, which is top half-space bounded by the surface $\partial G = \gamma := \{\y \in \mathbb{R}^3: y_3 = -l \}$, interpreted as the bottom of the ocean. и пусть $\textbf{n}(\y)$ --- внешняя нормаль к  границе области $G$. 
+Sonar signal is propagated in the medium $G:=\{\r \in \mathbb{R}^3:r_3 > -l\}$, which is top half-space bounded by the surface $\partial G = \gamma := \{\y \in \mathbb{R}^3: y_3 = -l \}$, interpreted as the bottom of the ocean. And let $\textbf{n}(\y)$ --- outer normal to the boundary of the domain $G$. 
 
 
 
@@ -122,20 +121,12 @@ The authors consider the case when the receiving antenna detects signals from on
 	\frac{ cl^2J_i \exp(-\mu c(t-t_i))dk_2}{|\Vt_i-\y|^2|\y-\Vt|y_1(t-t_i)|k_2 \V-c|},
 \end{multline}
 here, $|\Vt - \y| = |\dfrac{c(t-t_i)}{2}(1+\dfrac{V^2}{c^2})|$, $|\x-\y| = |\dfrac{c(t-t_i)}{2}(1-\dfrac{V^2}{c^2})|$, $y_1 = \sqrt{|\Vt-\y|^2 - l^2}.$
-\textcolor{blue}{The equation \ref{form} describes receiving signal from SSS in the time $t$ from starboard and port side in the i-th sensing interval. Integral in right part corresponds to set of points on the bottom from which the signal was reflected. Directivity pattern $S(\textbf{k})$ determines reflection area. $|Vt-y|$ - slant range for the receiver, $|Vt_i-y|$   - slant range for the source. $y_1$ - downrange.}
-
-\textcolor{red}{Уравнение (7) описывает принимаемый сигнал гидролокатором бокового обзора в момент времени t  слева и справа по борту в i-ый интервал зондирования. Интеграл в правой части соответствует множеству точек на дне, от которых отразился сигнал. Диаграмма направленности S(k) определяет область отражения. $|Vt-y|$ - slant range for the receiver, $|Vt_i-y|$   - slant range for the source. $y_1$ - downrange.}
+The equation (\ref{form}) describes receiving signal from SSS in the time $t$ from starboard and port side in the i-th sensing interval. Integral at the right side set on the seabottom domain from which the signal is reflected. Directivity pattern $S(\textbf{k})$ determines reflection area. $|Vt-y|$ denote the slant range for the receiver, whereas $|Vt_i-y|$   is the slant range for the source. $y_1$ is downrange.
 
 \section{The Inverse Problem}
-\textcolor{blue}{
-The decision of inverse problem represents big interest from the application point of view that is finding the coefficient of bottom scattering based on receiving signal. Thus, the problem reduced to solving fredholm integral equation of the first kind (\ref{form}) with respect to the function $\sigma_d$. It is well known that numerical solution this kind of equation is unsustainably and strongly depends on kind of core, and in our case by kind of directivity pattern $S(\textbf{k})$. Next, the authors consider two approaches to solving this equation.}
-
-\textcolor{red}{Большой интерес с прикладной точки зрения представляет решение обратной задачи, заключающейся в определении коэффициента донного расеяния на основе принятого сигнала. Таким образом, задача сводится to solving fredholm integral equation of the first kind (7) относительно функции $\sigma_d$. Хорошо известно, что численное решение данного типа уравнения неустойчиво и сильно зависит от вида ядра, а в нашем случае от вида диаграммы направленности S(k). Далее расмотрим 2 подхода к решению данного уравнения.}
+In practice there is interest of the solving an inverse problem for determination the seabottom scattering coefficient based on the received signal. Thus, the problem reduced to solving the Fredholm integral equation of the first kind (\ref{form}) on the function $\sigma_d$. It is well known that numerical solution of this equation is unsteady and depends on the kernel type, i.e. in (\ref{form}) is on the directivity pattern $S(\textbf{k})$. Further, authors consider two approaches to solving this equation.
 \subsection{Narrow DP Approximation}
-\textcolor{blue}{
-In previous paper \textbf{[WHAT]} the authors obtained a solution of equation (\ref{form}) in the approximation of narrow directivity pattern of the receiving antenna. In this case the solution of the equation reduces to the explicit formula for finding of bottom reflection $\sigma_d$. Thus, each moment at the bottom corresponds to a single time of receiving of the signal.}
-
-\textcolor{red}{В предыдущей работе \textbf{[]} авторы получили решение уравнения (7) в приближении узкой диаграммы направленности приемной антенны. В таком случае решение уравнения сводится к явной формуле для определения донного рассеяния $\sigma_d$. Таким образом, каждой точке на дне ставится в соответствие единственный момент времени приема сигнала. }
+In previous paper\cite{SPIE_KOV} authors obtained the solution of equation (\ref{form}) in the approximation of narrow directivity pattern of the receiving antenna. In this case the solution of the equation reduces to the explicit formula for determination of the  seabottom reflection coefficient $\sigma_d$. Thus, for each time point $\y$ in the seabottom $\gamma$ there is only one receiving time $t$.
 \begin{equation}
 S^{\pm}(\k) = \chi_{0,\mp1}(k_1)\delta(k_2)
 \end{equation}
@@ -145,16 +136,12 @@ Thus, the solution of (7) is
 	\sigma_d \left( y_1, y_2 \right) = \frac{2\pi}{J_icl^2} l_i^4 y_1 \exp(2\mu l_i)I^\pm(t).
 \end{equation}
 Here, a slant range $l_i=c(t-t_i)/2$, and $y_1=\sqrt{l_i^2-l^2}, y_2=Vt_i$.
-\textcolor{blue}{The decision (\ref{form}) in the form of (\ref{sigma_form}) is valid when angle of directivity pattern is small enough ($\varepsilon<0.1$). However, this assumption strongly narrows the applicability of formula (\ref{sigma_form}) and leads to defocusing of objects on the bottom, i.e. the diameter of the objects increases several times, and this effect is enhanced with increasing the sounding range.}
-
-\textcolor{red}{Решение (7) в виде (9) справедливо при достаточно малых растворах диаграммы направленности ($\varepsilon<0.1$). Однако данное предположение сильно сужает применимость формулы (9) и приводит к расфокусировке объектов на дне, т.е. диаметр объектов увеличивается в несколько раз, причем этот эффект усиливается с увеличением дальности зондирования.}
+The solution of (\ref{form}) in the form of (\ref{sigma_form}) is valid at small angles of the directivity pattern ($\varepsilon<0.1$). Unfortunatly, this assumption is not satisfied to the applicability of the formula (\ref{sigma_form}) and leads to the object defocusing on the bottom, i.e. the diameter of the objects increases several times, moreover, this effect is enhanced with increasing the sounding range.
 
 \subsection{Discrete Method}
-\textcolor{blue}{In the introduction authors gave an overview of some methods for solving such a problem. However, not one of these algorithms failed to apply in our case. The considered approaches are based on iteration methods of solution of integral equation, that imposes restrictions on the form of the nucleus. Convergence of the iterative process in equation (\ref{model}) may be provided in a case $\varepsilon < 1.5^\circ$, that narrows the applicability classic methods of solution. In this way, authors proposed a generalized one with a regularization parameter.}
+In the introduction authors outlined some methods for solving the problem.  The considered approaches are based on the iteration methods for solving an integral equation that imposes restrictions the kernel form. Convergence of the iterative process in equation (\ref{model}) is reached in a case $\varepsilon < 1.5^\circ$, that narrows the applicability classical methods. At that rate, authors generalize iterations with a regularization parameter.
 
-\textcolor{red}{ Во введении нами приведен обзор некоторых методов решения подобной задачи. Однако не один из этих алгоритмов не удалось применить в нашем случае. Рассмотренные подходы построены на итерационных методах решения интегрального уравнения, что в свою очередь накладывает ограничения на вид ядра. Применительно к уравнению (7) сходимость итерационного процесса  может быть обеспечена только в случае $\varepsilon < 1.5$ [градусов], что значительно сужает применимость классических методов решения. Таким образом, нами предложен обобщенный метод решения с регуляризационным параметром.}
-
-From a mathematical point of view, the equation (\ref{form}) is integral equation of I kind relatively of function $\sigma_d$. The authors introduce the sampling method for it solving. In other words authors define the areas in which $\sigma_d$ is constant. Inasmuch as $\sigma_d$ is defined on the set $\Gamma$ authors introduce a decomposition by axis $y_1, y_2$.
+From a mathematical point of view, the eq. (\ref{form}) is the Fredholm integral equation of the first kind on the function $\sigma_d$. Authors introduce the descrete method for solving it. That is to say authors define subdomains on the seabottom $\gamma$ in which $\sigma_d$ is constant. The discrete grid are defined  on the axes $y_1, y_2$.
 \begin{align}
 	\{ \big( y_1^p, y_2^q \big) \in\gamma: y_1^p = ph, y_2^q = qh \}, \notag \\ 
 	p \in \overline{1, H}, q \in \overline{1, M}, 
@@ -171,14 +158,14 @@ t_{ij} = t_i+j\tau, \tau = \frac{\Delta_t}{M}, a_{ijpq} = \\
 \frac{cl^2J_i \exp(-\mu c(t-t_i))dk_2}{|\Vt_i-\y|^2|\y-\Vt|y_1(t-t_i)|k_2 \V-c|}, \\
 \sigma_d^{pq} = \sigma_d(\textbf{y}^{pq}), \textbf{y}^{pq} = (y_1^p, y_2^q).
 \end{multline*}
-The equation (\ref{invI}) is S-diagonal SLE. Parameter $s$ depends on width directivity pattern receiving and transmitting antennas or band. For solving SLE (\ref{invI}) authors use  Seidel's method.
+Eq. (\ref{invI}) is S-diagonal SLE. Parameter $s$ depends on the width of the receiver directivity pattern and on the source duration. For solving SLE (\ref{invI}) authors use  Seidel's method.
 \section{Numerical experiments}
-In the experiments, authors consider a cases of the focusing at different width of directivity pattern of receiving antenna. The authors took a decision got by formula (\ref{sigma_form}) as a zero iteration in Seidel's method pictured on figures (\ref{ris:desc1}) - (\ref{ris:desc6}) over character a). Experiments were conducted with directivity pattern is equal to  1, 2, 4, 8, 14, 40 degrees. For the evaluation of \textbf{SOMETHING}, it was introduced \textbf{SOMETHING}. 
-Parameters applicable for construction of picture of sea bottom based on real data got from SSS are in the table \ref{table:name}. For solving of task of numerical integration authors applied Monte-Carlo's method.
+In the experiments, authors consider cases of the focusing on the different width of the directivity pattern. Authors use the formula (\ref{sigma_form}) as a zero iteration in Seidel's method, pictured on the figures (\ref{ris:desc1}) - (\ref{ris:desc6}) over character a). Experiments reach with the angle of the directivity pattern as  \{1, 2, 4, 8, 14, 40\} degrees. 
+The probing parameters are represented in table \ref{table:name}.
 \begin{table}[!ht]
 	\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 		\hline
-			$\mu$,м$^{-1}$ & $\Delta t$,c & $c$,м/с & $J$ & $l$,м & $y_1$,м & $y_2$,м\\
+			$\mu$,m$^{-1}$ & $\Delta t$,c & $c$,m/s & $J$ & $l$,m & $y_1$,m & $y_2$,m\\
 			\hline
 			0.018 & 0.4 & 1500 & 1 & 12 & [0,40] & [0, 40]\\ \hline
 	\end{tabular}
@@ -206,19 +193,17 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 	\label{ris:dno}
 \end{figure}
 
-\textcolor{blue}{Figure \ref{ris:dno} shows a model of the surface of the seabed with a size of 20 to 20 m. The sonar moves from the top left corner downwards, thereby setting the $ r_2 $ axis. Each line of the image corresponds new probing interval. From the physical point of view, the coefficient of bottom scattering is the fraction of the reflected signal and is limited by the range [0;1]. Real experiments shows that a fraction reflected signal does not exceed 35\%. Figure \ref{ris:dno} and all the subsequent figures depict an image of the seabed in orange gradations. Black color corresponds to 0, white color to 0.35. Experiments with different width of directivity pattern of the receiving antenna are presented below. The literal corresponds to the iteration number in the Seidel algorithm, starting with zero.}
-
-\textcolor{red}{На рисунке 2 изображена модель поверхности морского дна размером 20 на 20 м. Гидролокатор движется с верхнего левого угла вниз, тем самым задавая ось $r_2$. Каждая строчка изображения соответствует новому интервалу зондирования. С физической точки зрения коэффициент донного рассеяния представляет собой долю отраженного сигнала, таким образом ограничен диапазоном [0;1]. Реальные эксперименты показывают, что доля отраженного сигнала не превосходит 35\%. На рисунке 2 и всех последующих рисунках представлено изображение морского дна в градациях оранжевого. Черный цвет соответствует значению 0, белый цвет значению 0.35. Далее представлены эксперименты с различной шириной диаграммы направленности приемной антенны. Литера соответствует номеру итерации в алгоритме Зейделя, начиная с нулевой.}
+Fig. \ref{ris:dno} shows the seabottom surface with a size of 20 m to 20 m. The sonar moves from the top left corner downwards, thereby setting the $ r_2 $ axis. Each line of the image corresponds to the new probing interval. From the physical point of view, the coefficient of the seabottom scattering is part of the reflected signal and is limited by the range [0;1]. Real experiments show that a part of the reflected signal does not exceed 35\%. At the fig. \ref{ris:dno} and further black color corresponds to 0, whereas white color to 0.35. Experiments with different width of the directivity pattern of the receiving antenna are presented below. The letters corresponds to the iteration number in the Seidel algorithm, starting from zero.
 
 \begin{figure}[h!]\center%---------------ONE DEGREE---------------
 	\begin{tabular}{cccc}
 		\includegraphics[width=0.2\linewidth]{img/5/1.jpg}&
 		\includegraphics[width=0.2\linewidth]{img/5/3.jpg}&
 		\includegraphics[width=0.2\linewidth]{img/5/4.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/6.jpg}\\
+		\includegraphics[width=0.2\linewidth]{img/5/5.jpg}\\
 		a & b & c & d \\
+		\includegraphics[width=0.2\linewidth]{img/5/6.jpg}&
 		\includegraphics[width=0.2\linewidth]{img/5/7.jpg}&
-		\includegraphics[width=0.2\linewidth]{img/5/8.jpg}&
 		\includegraphics[width=0.2\linewidth]{img/5/8.jpg}&
 		\includegraphics[width=0.2\linewidth]{img/5/9.jpg}\\
 		\\
@@ -312,26 +297,26 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 		\hline
 		& $||\Delta\sigma||_2$ & $||\Delta\sigma||_\infty$ &
 		& $||\Delta\sigma||_2$ & $||\Delta\sigma||_\infty$ \\ \hline
-		a & 0.0426 & 0.0749 & e &  0.0426 & 0.0749\\ \hline
-		b & 0.0426 & 0.0749 & f &  0.0426 & 0.0749\\ \hline
-		c & 0.0426 & 0.0749 & g &  0.0426 & 0.0749\\ \hline
-		d & 0.0426 & 0.0749 & h &  0.0426 & 0.0749\\ \hline
+		a & 0.2666 & 0.0426 & e &  0.1730 & 0.0199\\ \hline
+		b & 0.2051 & 0.0182 & f &  0.1832 & 0.0283\\ \hline
+		c & 0.1781 & 0.0106 & g &  0.1890 & 0.0366\\ \hline
+		d & 0.1778 & 0.0125 & h &  0.1952 & 0.0447\\ \hline
 	\end{tabular}
 	\label{table:desc1}
-	\caption{Нормы для $1^\circ \times$}
+	\caption{$1^\circ$}
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
 		\hline
 		& $||\Delta\sigma||_2$ & $||\Delta\sigma||_\infty$ &
 		& $||\Delta\sigma||_2$ & $||\Delta\sigma||_\infty$ \\ \hline
-		a & 0.0426 & 0.0749 & e &  0.0426 & 0.0749\\ \hline
-		b & 0.0426 & 0.0749 & f &  0.0426 & 0.0749\\ \hline
-		c & 0.0426 & 0.0749 & g &  0.0426 & 0.0749\\ \hline
-		d & 0.0426 & 0.0749 & h &  0.0426 & 0.0749\\ \hline
+		a & 0.3122 & 0.0749 & e &  0.1740 & 0.0207\\ \hline
+		b & 0.2128 & 0.0337 & f &  0.1843 & 0.0319\\ \hline
+		c & 0.1718 & 0.0191 & g &  0.1949 & 0.0432\\ \hline
+		d & 0.1647 & 0.0134 & h &  0.2 & 0.0540\\ \hline
 	\end{tabular}
 	\label{table:desc2}
-	\caption{Нормы для $2^\circ \times$}	
+	\caption{$2^\circ$}	
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -344,7 +329,7 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 		d & 0.1634 & 0.0234 & h &  0.1983 & 0.0526\\ \hline
 	\end{tabular}
 	\label{table:desc3}
-	\caption{Нормы для $4^\circ$}	
+	\caption{$4^\circ$}	
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -357,7 +342,7 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 		d & 0.1984 & 0.0291 & h &  0.1817 & 0.0477\\ \hline
 	\end{tabular}
 	\label{table:desc4}
-	\caption{Нормы для $8^\circ$}
+	\caption{$8^\circ$}
 \end{table}
 \begin{table}[h!]
 	\begin{tabular}{|c|c|c||c|c|c|}
@@ -370,7 +355,7 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 		d & 0.2505 & 0.0440 & h &  0.2 & 0.0423\\ \hline
 	\end{tabular}
 	\label{table:desc5}
-	\caption{Нормы для $14^\circ$}
+	\caption{$14^\circ$}
 \end{table}
 \begin{table}[h!]
 		\begin{tabular}{|c|c|c||c|c|c|}
@@ -383,50 +368,81 @@ The surface of the bottom is described by a function \ref{sigma_d} and is shown 
 			d & 0.1384 & 0.4 & h &  0.1165 & 0.4\\ \hline
 	\end{tabular}
 	\label{table:desc6}
-	\caption{Нормы для $40^\circ$}
+	\caption{$40^\circ$}
 \end{table}
  
 
 \section*{Conclusion}
-\textcolor{blue}{
-As we can from the experiments, an increase in the width of directivity pattern of the receiving antenna leads to increase object diameter, for example, in the last experiments at $\varepsilon=40^\circ$ diameter in the zeroth approximation increase in 2 times. It is worth noting that the method works steadily for small solutions of the directivity pattern, as can be seen from Fig. \ref{ris:desc2}. Next, in Figures \ref{ris:desc3} - \ref{ris:desc5}, you see the compression of objects to their geometric center. However, rough sampling leads to the appearance of artifacts that repeat the boundaries of the object, and with each new iteration this effect is multiplied. To combat boundary deformations, the authors use a priori information on the admissible values of the bottom scattering coefficient, which allows us to project the solution to allowable boundaries after each iteration. As you can see from the figures, the method qualitatively restores the boundaries of objects in less than 8 iterations. With small solutions of directivity pattern, it is possible to obtain quantitative similarity. It is worth noting that in the limiting case at $\varepsilon = 40\circ$ (Fig.\ref{ris:desc6}) only the object with larger diameter was recovered, this is due to the fact that the trace of the directivity pattern of the bottom is larger than the diameter of small objects. Tables 2 - 7 show the root-mean-square and maximum errors in reconstructing the bottom scattering coefficient at each iteration of the Seidel method. As can be seen from the experiments, the root-mean-square error decreases to a certain threshold value, and then starts to increase, thereby confirming the instability of the iterative method. However, the visual representation of the image with further iterations only improves. This is due to a discrepancy in absolute values with an exact solution, but an improvement in the boundaries of objects From the mathematical point of view, this criterion shows the instability of the algorithm and defines the scope of its use, but when processing real data, the researcher often tries to obtain a relative picture by normalizing each iteration. In this case, the method is absolutely applicable to any solutions of directivity pattern of the antenna patterns.
-}
-
-\textcolor{red}{Как видно из экспериментов увеличение ширины диаграммы направленности приемной антенны ведет к увеличение диаметра объекта, например, в последнем эксперименте при $\varepsilon = 40\circ $ диаметр в нулевом приближении увеличился в 2 раза.  Стоит отметить, что метод устойчиво работает при малых растворах диаграммы направленности, это видно по рисунку 4. Далее на рисунках 5-7 виднеется сжатие объектов к своему геометрическому центру. Однако грубая дискретизация приводит к появлению артефактов, повторяющих границы объекта, причем с каждой новой итерацией данный эффект умножается. Для борьбы с пограничными деформациями авторы используют априорную информацию о допустимых значениях коэффициента донного рассеяния, что позволяет после каждой итерации спроецировать решение на допустимые границы.  Как видно из рисунков метод качественно восстановаливает границы объектов менее, чем за 8 итераций. При малых растворах ДН удается получить и количесвтвенное сходство. Стоит отметить, что в предельном случае при $\varepsilon = 40\circ $ (рис 8) восстановился только объект с бОльшим диаметром, это связано с тем, что след диаграммы напрравленности на дне больше диаметра малых объектов.  В таблицах 2-7 представлены среднкадратичная и максимальная ошибки восстановления коэффициента донного рассеяния на каждой итерации метода Зейделя.  Как видно из экспериментов, среднеквадратичная ошибка убывает до некоторого порогового значения, а после начинает увеличивается, тем самым подтверждается неустойчивость итерационного метода. Однако визуальное представление изображение с дальнейшими итерациями только  улучшается. Это связано с расхождением по абсолютным значениям с точным решением, но улучшением границ объектов. С математической точки зрения данный критерий показывает неустойчивость алгоритма и определяет рамки его использования, но при обработке реальных данных зачастую исследователь пытается получить относительную картину, проводя нормировку каждой итерации. В таком случае, метод абсолютно применим для любых растворов диаграмм направленности приемной антенны.}
+As we can see, increasing the angle solution of the directivity pattern leads to increasing object diameter on the reconstruction image. For example, in the last experiments when $\varepsilon=40^\circ$ the diameter in the zeroth iteration increase in two times. It is worth to note that the method is applicable at small solutions of the directivity pattern, as can be seen from Fig. \ref{ris:desc2}. Further, in figures \ref{ris:desc3} - \ref{ris:desc5}, objects are compressed to their geometric center. However, the rough sampling leads to the appearance of artifacts that repeat the boundaries of the object. Moreover, each new iteration this effect is multiplied. To vanish boundary deformations, authors use a priori information on the admissible values of the seabottom scattering coefficient which allows to project the solution to allowable boundaries in each iteration. As you can see from the figures, the method qualitatively restores the boundaries of objects less than 8 iterations. With small solutions of directivity pattern, it is possible to obtain quantitative similarity. It is worth to note that in the limiting case at $\varepsilon = 40\circ$ (Fig.\ref{ris:desc6}) only the object with larger diameter is reconstructed due to the trace of the directivity pattern on the seabottom is larger than the diameter of small objects. Tables 2 --- 7 show the RMS and maximum errors in reconstructing the seabottom scattering coefficient at each iteration of the Seidel method. As can be seen from the experiments, the RMS error decreases to the certain threshold value, but after is increased. Thereby, the instability of the iterative method is confirmed. However, the visual representation of the image with further iterations only improves due to a discrepancy in absolute values with an exact solution. If in each iteration the solution is normalized to the maximum the method is absolutely applicable to any solutions of the directivity pattern.
 
 \section*{Acknowledgements}
-
-\textcolor{red}{Put acknowledgements in the last section, please do not use footnotes for that.}
+The research was supported by the Russian Science Foundation (Project No. 14-11-00079).
 
 %  citations should be arranged by order of appearance
 
 \begin {thebibliography}{9}
 
-\bibitem{p1} Bakushinskii, A.\,B., Goncharskii, A.\,V., Levitan, S.\,Yu., 1988, 
-			Fast linear iterative algorithms of image restoration, 
+\bibitem{Turner} Turner, J.\,A., Weaver, R.\,L., 1994, 
+			Radiative transfer of ultrasound, 
+			\emph{The Journal of the Acoustical Society of America},  
+			Vol.\; {\bf 96(6)}, pp.\; 3654--3674.
+
+\bibitem{Zurk} Quijano, J.\,E., Zurk, L.\,M., 2009, 
+			Radiative transfer theory applied to ocean bottom modeling, 
+			\emph{The Journal of the Acoustical Society of America},  
+			Vol.\; {\bf 126(4)}, pp.\; 711-723.
+
+\bibitem{SMJ2015} Prokhorov, I.\,V., Sushchenko,  A.\,A., 2015, 
+			On the well-posedness of the Cauchy problem for the equation of radiative transfer with Fresnel matching conditions,
+			\emph{Siberian Mathematical Journal},
+			Vol.\; {\bf 56(4)}, pp.\; 736--745. 
+
+
+\bibitem{Andreeva} Andreeva,  I.\,B., 1995,
+			Comparative estimates of surface, bottom, and volume sound scattering in the ocean,
+			\emph{Akusticheskij Zhurnal},
+			Vol.\; {\bf 41(5)}, pp.\; 699--705.
+
+
+\bibitem{AF2015}  Prokhorov, I.\,V., Sushchenko, A.\,A., 2015, 
+			Studying the problem of acoustic sounding of the seabed using methods of radiative transfer theory, 
+			\emph{Acoustical Physics},
+			Vol.\; {\bf 61(3)}, pp.\; 368--375.
+
+\bibitem{SPIE_KOV} Kovalenko, E.\,O., Prokhorov, I.\,V., Sushchenko, A.\,A., 2016,
+			Processing of the information from side-scan sonar
+			\emph{Proceedings of SPIE},
+			\textcolor{red}{ Vol.\;{\bf 10035}, doi:10.1117/12.2249369 }
+
+\bibitem {Tikhonov} Tikhonov, A.\,N., 1943, 
+			Ob ustoichivosti obratnyh zadach [On the stability of inverse problems], 
+			\emph{Doklady Akademii Nauk USSR}, 
+			Vol. \;{\bf 39}, No. \;5, pp.\; 195–198 (in Russian).
+
+\bibitem{Baku} Bakushinskii, A.\,B., Goncharskii, A.\,V., Levitan, S.\,Yu., 1988,
+			Fast linear iterative algorithms of image restoration,
 			\emph{USSR Computational Mathematics and Mathematical Physics},
-			Vol.\; {\bf 28}, pp.\; 210--213
+			Vol.\; {\bf 28}, pp.\; 210--213.
+
+\bibitem {PRUAC} Prokhorov, I.\,V., Sushchenko A.\,A., 2015,
+			 Analysis of the impact of volume scattering and radiation pattern on the side-scan sonar images, 
+			 \emph{Proceedings of Meetings on Acoustics},
+			 Vol.\; {\bf 24}, Art. No.\; 005007.
+
+\bibitem {Shcherbinina} Ivashchuk, O.\,A., Shcherbinina, N.\,V., 2014,
+			Sravnitel'nyj analiz metodov vosstanovleniya pri korrekcii rezkosti na snimkah vysokogo razresheniya, 
+			\emph{Nauchnye vedomosti BelGU. Seriya: Istoriya. Politologiya. Ekonomika. Informatika.},
+			Vol.\; {\bf 21}, pp.\; 118--123.
 			
 \bibitem{p2}  Goncharskii, A.\,V., Stepanov, V.\,V., 1986,
 			Inverse problems of coherent optics, focussing in a line
 			\emph{USSR Computational Mathematics and Mathematical Physics},
-			Vol.\;{\bf 26}, pp.\; 50--57
+			Vol.\;{\bf 26}, pp.\; 50--57.
 			
 \bibitem{p3} Yagola, A.\,G., Koshev, N.\,A., 2008,
-			Restoration of smeared and defocused color images
+			Restoration of smeared and defocused color images, 
 			\emph{Numerical Methods and Programming},
-			Vol.\;{\bf 9}, pp.\; 207–212 (in Russian)
-			
-\bibitem{SPIE_KOV} Kovalenko, E.\,O., Prokhorov, I.\,V., Sushchenko, A.\,A., 2016,
-			Processing of the information from side-scan sonar
-			\emph{Proceedings of SPIE},
-			Vol.\;{\bf 10035}, pp.\; ???????
-
-\bibitem{p111} Surname, I.\,I., Surname, I.\,I., 1998,
-            Title of the reference,
-            \emph{Journal}, Vol.\;{\bf 2}, pp.\;15--25.
-
-\bibitem{p222} Surname, I.\,I., 2010, \textit{Title of Book}, Publisher, City.
+			Vol.\;{\bf 9}, pp.\; 207–212 (in Russian).
 
 \end{thebibliography}
 
